# autopiper

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  testing.yml
src/autopiper/: __init__.py  cli.py  controllers.py  csv_rows_to_modelname_dict.py  download_github_release_asset.py  download_piper_package.py  download_voice_models.py  exceptions.py  is_voice_model_installed.py  logger.py  models.py  read_asset.py  read_csv_to_dict.py  settings.py  text_to_speech.py
src/autopiper/assets/: voices.csv
tests/: __init__.py  test_csv_rows_to_modelname_dict.py  test_download_github_release_asset.py
